// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint renders correctly down prop 1`] = `
<DocumentFragment>
  .css-1titrib-Breakpoint {
  display: none;
}

@media (max-width: 767px) {
  .css-1titrib-Breakpoint {
    display: block;
  }
}

<div
    class="css-1titrib-Breakpoint e1ehbeci0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Breakpoint renders correctly up prop 1`] = `
<DocumentFragment>
  .css-1yjptq9-Breakpoint {
  display: none;
}

@media (min-width: 768px) {
  .css-1yjptq9-Breakpoint {
    display: block;
  }
}

<div
    class="css-1yjptq9-Breakpoint e1ehbeci0"
  >
    Hello
  </div>
</DocumentFragment>
`;
